--- a/pages/home/home.wxml
+++ b/pages/home/home.wxml
@@ -2,7 +2,7 @@
 <view>
 
   <swiper indicator-dots="true" autoplay="true" class="swiper">
-    <block wx:for="{{bannerArr}}">
+    <block wx:for="{{bannerArr}}" wx:key="key_word">
 
       <swiper-item class="banner-item" data-id="{{item.key_word}}" bindtap="onProductsItemTap">
         <image mode="aspectFill" class="item-image" src="{{item.img.url}}"></image>
@@ -16,7 +16,7 @@
     <view class="home-main-theme">
       <view class="home-main-header">精选主题</view>
       <view class="theme-box">
-        <block wx:for="{{themeArr}}">
+        <block wx:for="{{themeArr}}" wx:key="id">
 
           <view wx:if="{{index==2}}" class="theme-item big" data-id="{{item.id}}" data-name="{{item.name}}" bindtap="onThemesItemTap">
             <image src="{{item.topic_img.url}}"></image>
