--- a/pages/home/home.wxml
+++ b/pages/home/home.wxml
@@ -1,11 +1,13 @@
 <!--pages/home/home.wxml-->
-<view>
+<import src="../tpls/products/products-tpl.wxml" />
+
+<view class="container">
 
   <swiper indicator-dots="true" autoplay="true" class="swiper">
-    <block wx:for="{{bannerArr}}" wx:key="key_word">
+    <block wx:for="{{bannerArr}}">
 
       <swiper-item class="banner-item" data-id="{{item.key_word}}" bindtap="onProductsItemTap">
-        <image mode="aspectFill" class="item-image" src="{{item.img.url}}"></image>
+        <image mode="aspectFill" src="{{item.img.url}}"></image>
       </swiper-item>
 
     </block>
@@ -16,7 +18,7 @@
     <view class="home-main-theme">
       <view class="home-main-header">精选主题</view>
       <view class="theme-box">
-        <block wx:for="{{themeArr}}" wx:key="id">
+        <block wx:for="{{themeArr}}">
 
           <view wx:if="{{index==2}}" class="theme-item big" data-id="{{item.id}}" data-name="{{item.name}}" bindtap="onThemesItemTap">
             <image src="{{item.topic_img.url}}"></image>
@@ -31,7 +33,7 @@
 
     <view class="home-main-products">
       <view class="home-main-header">最近新品</view>
-      <!-- <template is="products" data="{{products:productsArr}}"></template> -->
+      <template is="products" data="{{products:productsArr}}"></template>
     </view>
 
   </view>
