--- a/pages/product/product.wxml
+++ b/pages/product/product.wxml
@@ -5,7 +5,7 @@
     <view class="fixed-btns-box">
       <view class="fixed-cart">
         <image src="../../imgs/icon/cart@top.png"></image>
-        <view></view>
+        <view wx:if="{{cartTotalCounts>0}}">{{cartTotalCounts}}</view>
       </view>
     </view>
 
@@ -28,7 +28,7 @@
 
       <view class="middle-border"></view>
 
-      <view class="add-cart-btn {{product.stock==0?'disabled':''}}">
+      <view class="add-cart-btn {{product.stock==0?'disabled':''}}" bindtap="onAddingToCartTap">
         <text>加入购物车</text>
         <image class="cart-icon" src="../../imgs/icon/cart.png"></image>
       </view>
