--- a/pages/product/product.wxss
+++ b/pages/product/product.wxss
@@ -35,21 +35,6 @@
   text-align: center;
 }
 
-.fiexd-cart.animate {
-  animation: aCartScale 200ms cubic-bezier(0.17, 0.67, 0.83, 0.67);
-  animation-fill-mode: backwards;
-}
-
-@-webkit-keyframes aCartScale {
-  0% {
-    -webkit-transform: scale(1.1);
-  }
-
-  100% {
-    -webkit-transform: scale(1);
-  }
-}
-
 .detail-topic-img {
   display: flex;
   justify-content: center;
@@ -95,6 +80,7 @@
 
 .add-cart-btn.disabled {
   color: #d5d5db;
+  pointer-events: none;
 }
 
 /*数量选择器*/
